--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -17,7 +17,7 @@
             crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 </head>
 <body>
-<!--/*@thymesVar id="recipe" type="bjorn.petprojects.recipes.domain.Recipe"*/-->
+<!--/*@thymesVar id="recipe" type="bjorn.petprojects.recipes.commands.RecipeCommand"*/-->
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
@@ -27,7 +27,7 @@
                     <p>Please Correct Errors Below</p>
                 </div>
 
-                <input type="hidden" th:field="*{id}"/>
+
                 <div class="pannel-group">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
